bootstrap/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
